--- a/src/AirLineWeb/appsettings.Development.json
+++ b/src/AirLineWeb/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings":
+  {
+    "AirlineConnection":"Server=localhost,1433;Database=AirlineWebDB;User Id=sa;Password=p@ssw0rd;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
